--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         
         <div class="nav-links">
-          <a href="/HTML/index.html">Home</a>
+          <a href="/index.html">Home</a>
           <a href="/HTML/products.html">Products</a>
           <a href="/HTML/about.html" >About Us</a>
           <a href="/HTML/contact.htm" >Contact Us</a>
