--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                     <div class="footer-container">
                         <div class="footer-column">
                             <h4>Contact Us</h4>
-                            <p>1234 Furniture St, Suite 100<br>City, State, 12345</p>
-                            <p>Phone: (123) 456-7890<br>Email: support@yourfurniture.com</p>
+                            <p>1234 Furniture St,100<br>Nairobi</p>
+                            <p>Phone: (254) 456-7890<br>Email: support@belionfurniture.com</p>
                         </div>
                         <div class="footer-column">
                             <h4>Follow Us</h4>
