--- a/HTML/contact.htm
+++ b/HTML/contact.htm
@@ -39,31 +39,38 @@
       </div>
      
       <body>
-        <header>
-            <h1>Contact Us</h1>
-        </header>
-        <main>
-            <section class="contact-section">
-                <div class="contact-container">
-                    <h2>Get in Touch</h2>
-                    <form action="#" method="POST">
+         <section class="contact">
+        <div class="container">
+            <h2>Contact Us</h2>
+            <div class="contact-content">
+                <div class="contact-form">
+                    <form action="#" method="post">
                         <div class="form-group">
-                            <label for="name">Name</label>
+                            <label for="name">Your Name</label>
                             <input type="text" id="name" name="name" required>
                         </div>
                         <div class="form-group">
-                            <label for="email">Email</label>
+                            <label for="email">Your Email</label>
                             <input type="email" id="email" name="email" required>
                         </div>
                         <div class="form-group">
-                            <label for="message">Message</label>
+                            <label for="message">Your Message</label>
                             <textarea id="message" name="message" rows="5" required></textarea>
                         </div>
                         <button type="submit">Send Message</button>
                     </form>
                 </div>
-            </section>
-        </main>
+                <div class="contact-info">
+                    <h3>Visit Us</h3>
+                    <p>1234 Furniture Ave, Nairobi, Kenya</p>
+                    <div class="map-placeholder">
+                        <!-- Replace with actual map embed -->
+                        <p>Map Placeholder</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
         <footer class="footer">
             <div class="footer-container">
                 <div class="footer-column">
