--- a/HTML/contact.htm
+++ b/HTML/contact.htm
@@ -64,7 +64,15 @@
                     <h3>Visit Us</h3>
                     <p>1234 Furniture Ave, Nairobi, Kenya</p>
                     <div class="map-placeholder">
-                        <!-- Replace with actual map embed -->
+                        <iframe 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.835254678833!2d-122.08780068468133!3d37.422065979823794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fbb4fefc91d19%3A0x2c0b123456789abc!2sGoogleplex!5e0!3m2!1sen!2sus!4v1618961626887!5m2!1sen!2sus" 
+                            width="100%" 
+                            height="200" 
+                            style="border:0;" 
+                            allowfullscreen="" 
+                            loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
                         <p>Map Placeholder</p>
                     </div>
                 </div>
