--- a/HTML/contact.htm
+++ b/HTML/contact.htm
@@ -39,46 +39,47 @@
       </div>
      
       <body>
-         <section class="contact">
-        <div class="container">
-            <h2>Contact Us</h2>
-            <div class="contact-content">
-                <div class="contact-form">
-                    <form action="#" method="post">
-                        <div class="form-group">
-                            <label for="name">Your Name</label>
-                            <input type="text" id="name" name="name" required>
+    <div class="wrapper">
+        <section class="contact">
+            <div class="container">
+                <h2>Contact Us</h2>
+                <div class="contact-content">
+                    <div class="contact-form">
+                        <form action="#" method="post">
+                            <div class="form-group">
+                                <label for="name">Your Name</label>
+                                <input type="text" id="name" name="name" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Your Email</label>
+                                <input type="email" id="email" name="email" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Your Message</label>
+                                <textarea id="message" name="message" rows="5" required></textarea>
+                            </div>
+                            <button type="submit">Send Message</button>
+                        </form>
+                    </div>
+                    <div class="contact-info">
+                        <h3>Visit Us</h3>
+                        <p>1234 Furniture Ave, Nairobi, Kenya</p>
+                        <div class="map-placeholder">
+                            <!-- Google Maps Embed -->
+                            <iframe 
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15955.614643863718!2d36.80649445!3d-1.2920658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f112c67a4a7b7%3A0xdefe6c3d7a1f4717!2sNairobi%2C%20Kenya!5e0!3m2!1sen!2sus!4v1693052869123!5m2!1sen!2sus" 
+                                width="100%" 
+                                height="200" 
+                                style="border:0;" 
+                                allowfullscreen="" 
+                                loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade">
+                            </iframe>
                         </div>
-                        <div class="form-group">
-                            <label for="email">Your Email</label>
-                            <input type="email" id="email" name="email" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Your Message</label>
-                            <textarea id="message" name="message" rows="5" required></textarea>
-                        </div>
-                        <button type="submit">Send Message</button>
-                    </form>
-                </div>
-                <div class="contact-info">
-                    <h3>Visit Us</h3>
-                    <p>1234 Furniture Ave, Nairobi, Kenya</p>
-                    <div class="map-placeholder">
-                         <iframe 
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15955.614643863718!2d36.80649445!3d-1.2920658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f112c67a4a7b7%3A0xdefe6c3d7a1f4717!2sNairobi%2C%20Kenya!5e0!3m2!1sen!2sus!4v1693052869123!5m2!1sen!2sus" 
-                            width="100%" 
-                            height="200" 
-                            style="border:0;" 
-                            allowfullscreen="" 
-                            loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade">
-                        </iframe>
-            
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
         <footer class="footer">
             <div class="footer-container">
                 <div class="footer-column">
