--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="content">
             <h2 class="hero">Exotic <span style="color: orange;">Minimal</span><br>Furniture</h2>
             <p>Discover our range of minimal and exotic furniture designed to bring elegance to your home.</p>
-            <a href ="/css/top-products.css">" class="cta-button">Shop Now</a>
+            <a href="#shop" class="cta-button">Shop Now</a>
         </div>
     </div>
     
