--- a/HTML/contact.htm
+++ b/HTML/contact.htm
@@ -19,7 +19,7 @@
         <input type="checkbox" id="nav-check">
         <div class="nav-header">
           <div class="nav-title">
-            Belion
+            Furniture Haven
           </div>
         </div>
         <div class="nav-btn">
