--- a/HTML/about.html
+++ b/HTML/about.html
@@ -19,7 +19,7 @@
         <input type="checkbox" id="nav-check">
         <div class="nav-header">
           <div class="nav-title">
-            Furniture Haven
+            Belion
           </div>
         </div>
         <div class="nav-btn">
