--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                     <path d="M22.675 0H1.325C.595 0 0 .595 0 1.326v21.348C0 23.405.595 24 1.325 24H12.82v-9.293H9.692v-3.622h3.128V8.413c0-3.1 1.894-4.787 4.659-4.787 1.325 0 2.463.099 2.794.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.312h3.587l-.467 3.622h-3.12V24h6.116c.73 0 1.325-.595 1.325-1.326V1.326C24 .595 23.405 0 22.675 0z"/>
                                 </svg>
                             </a>
-                            <a href="https://www.twitter.com" target="_blank" aria-label="Twitter">
+                            <a href="https://x.com/Gilbert_Belion" target="_blank" aria-label="Twitter">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
                                     <path d="M23.954 4.569c-.885.39-1.83.654-2.825.775 1.014-.611 1.794-1.574 2.163-2.723-.951.564-2.005.974-3.127 1.195-.897-.959-2.178-1.559-3.594-1.559-2.717 0-4.92 2.203-4.92 4.917 0 .385.045.76.127 1.12C7.69 8.094 4.066 6.13 1.64 3.161c-.423.722-.666 1.561-.666 2.475 0 1.708.87 3.213 2.188 4.096-.807-.026-1.566-.247-2.23-.616v.061c0 2.385 1.693 4.374 3.946 4.827-.413.111-.849.171-1.296.171-.314 0-.623-.03-.923-.086.624 1.951 2.433 3.374 4.576 3.415-1.68 1.319-3.809 2.107-6.102 2.107-.396 0-.79-.023-1.175-.067 2.18 1.396 4.768 2.209 7.548 2.209 9.057 0 14.01-7.513 14.01-14.011 0-.213 0-.425-.015-.637.961-.693 1.797-1.56 2.457-2.548l-.047-.02z"/>
                                 </svg>
