--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
       </div>
   </section>
-     <section class="testimonials">
+     <section class="mainproduct">
       <div class="container">
           <h2>What Our Customers Say</h2>
           <div class="testimonial-slider">
